优化补全